plugins {
    id 'java'
}

group 'com.waridley.chatgame'
version '0.1'

sourceCompatibility = 1.8

repositories {
    mavenCentral()

    maven { url "https://oss.jfrog.org/artifactory/libs-release"}
    maven { url 'https://raw.githubusercontent.com/Waridley/twitch4j/master'}
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'


    //mongodb java driver
    compile 'org.mongodb:mongo-java-driver:3.11.0'

    //Twitch API library
    compile group: 'com.github.twitch4j', name: 'twitch4j', version: '1.0.0-alpha.16'

    //lombok
    compileOnly 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'

    //BSON plugin for Jackson
    compile 'de.undercouch:bson4jackson:2.9.2'

    compile project(":api:backend")
    compile project(":game")
    compile project(":ttv")
    compile project(":credentials")
}
